2009-10-06  Piotr Fusik  <fox@scene.pl>
* raw2c.pl, files2anylang.pl, anylang.h, asap.c, Makefile, players/Makefile,
  win32/Makefile, flash/Makefile, javascript/Makefile, javascript/asap.ppjs,
  csharp/Makefile: support native formats in JavaScript and Flash

* anylang.h, asap.c, acpu.c, apokeysnd.c, flash/ASAP.ppas, flash/PokeyState.as,
  flash/ASAP_ModuleInfo.as, flash/Makefile:
  optimized Flash version by declaring static types

* flash/ASAPPlayer.as: support FlashVars


2009-10-02  Piotr Fusik  <fox@scene.pl>
* java/asap_midlet.MF, win32/Makefile: upgraded midlet version number

* README: information about JavaScript, Flash, mmSAP and Rockbox


2009-10-01  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, anylang.h, asap_internal.h, asap.ppjs,
  asap2wav.ppjs: fixes and optimizations for JavaScript

* javascript/asapweb.ppjs, javascript/Makefile, win32/Makefile:
  JavaScript for web browsers (works in Firefox)

* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/ASAP_ModuleInfo.as,
  flash/PokeyState.as, flash/Makefile, anylang.h, asap.c, apokeysnd.c,
  asap_internal.h, win32/Makefile: work on Flash version continued


2009-09-29  Piotr Fusik  <fox@scene.pl>
* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/Makefile, anylang.h, apokeysnd.c,
  asap.c, win32/Makefile: Flash version!


2009-09-28  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: binary distributions renamed from *-win32.* to *-windows.*


2009-09-26  Piotr Fusik  <fox@scene.pl>
* javascript/asap.ppjs, javascript/asap2wav.ppjs, javascript/Makefile,
  acpu.c, apokeysnd.c, asap.c, asap_internal.h, anylang.h, win32/Makefile:
  ASAP can converted to pure JavaScript!

* asap.c, asap.h, asap2wav.c: ASAP_SONGS_MAX

* asap.c, asap_internal.h, anylang.h, acpu.c, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava, Makefile, csharp/Makefile, gsplayer/Makefile, java/Makefile,
  win32/Makefile: C/Java/C# macros moved to anylang.h and improved


2009-09-25  Piotr Fusik  <fox@scene.pl>