@@ -1,0 +1,36 @@
+How to use
+----------
+
+Command-line ASAP2WAV
+~~~~~~~~~~~~~~~~~~~~~
+
+This version is for Windows only.
+Enter the following command line to see the syntax:
+
+---------------------------------------------------------------------------
+cscript asap2wav.js
+---------------------------------------------------------------------------
+
+Unless you specify the `-o`/`--output` option, the output filename will be
+constructed from the input filename with the extension changed to `wav`.
+
+
+ASAP2WAV in Firefox
+~~~~~~~~~~~~~~~~~~~
+
+It's tricky to read and generate binary files in JavaScript.
+My trick currently works in Firefox, but not Internet Explorer 8,
+Google Chrome or Opera.
+
+Sample web page:
+
+---------------------------------------------------------------------------
+<html>
+  <head>
+    <script src="asapweb.js"></script>
+  </head>
+  <body onload="var a = document.getElementById('download'); a.href = ASAP2WAVURL('X_Ray_2.sap', -1, '', ASAP_SampleFormat.U8); a.innerHTML = 'Download'">
+    <a id="download" href="#">Please wait</a>
+  </body>
+</html>
+---------------------------------------------------------------------------
