@@ -1,3 +1,8 @@
+2009-10-28  Piotr Fusik  <fox@scene.pl>
+* INSTALL, README, javascript/USAGE, win32/Makefile:
+  JavaScript and Flash build and usage instructions
+
+
 2009-10-06  Piotr Fusik  <fox@scene.pl>
 * raw2c.pl, files2anylang.pl, anylang.h, asap.c, Makefile, players/Makefile,
   win32/Makefile, flash/Makefile, javascript/Makefile, javascript/asap.ppjs,
@@ -5,7 +10,7 @@
 
 * anylang.h, asap.c, acpu.c, apokeysnd.c, flash/ASAP.ppas, flash/PokeyState.as,
   flash/ASAP_ModuleInfo.as, flash/Makefile:
-  optimized Flash version by declaring static types
+  optimized Flash version by declaring more types
 
 * flash/ASAPPlayer.as: support FlashVars
 
